# base-template-mini-app

./: .env.example  .env.production  .gitignore  .vercelignore  EXTENSION_TROUBLESHOOTING.md  FIXES_COMPLETED.md  NEWS_INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SETUP.md  PROJECT_SUMMARY.md  README.md  STATUS.md  mcp-server.js  mcp-server.json  netlify.toml  news-server.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test-api.js  test-news-server.js  tsconfig.json  vercel.json
.github/workflows/: deploy.yml
bot/: Cargo.toml
bot/src/: main.rs
contracts/: ArbiTipsTrading.sol  ArbitrageExecutor.sol  CEXBridge.sol  hardhat.config.js
contracts/scripts/: deploy.js
demo/: price-tracking-demo.ts  simple-price-demo.js
extension/: background.js  content-styles.css  contentScript.bundle.js  manifest.json  popup.html  popup.js
public/: farcaster.json  manifest.json
scripts/: build-extension.js  deploy-contracts.js  generate-icons.js  start-production.ts  test-production.ts
src/app/: globals.css  layout.tsx  page-complex.tsx  page.tsx  unified-dashboard.tsx
src/components/: Header.tsx  LoadingSpinner.tsx  NewsSection.tsx  OpportunityCard.tsx  Scanner.tsx  UserStats.tsx  ai-trading-dashboard.tsx  index.tsx
src/lib/: ai-trading-engine.ts  arbitrage.ts  auth.ts  farcaster.ts  opportunityDetection.ts  performanceMonitoring.ts  priceDiscovery.ts  providers.tsx  riskManagement.ts  security-manager.ts  use-ai-trading.ts  utils.ts  wallet-connection.ts
tests/: ai-trading.test.ts
(+18 files in other folders)
